# use_cases

./: .gitattributes  CMakeLists.txt  README.md
use_cases/: CMakeLists.txt
use_cases/4bolt_mpmd/: 4bolt.cogent  background.gen  background.jou  nodal_oc1.xml  nodal_oc2.xml
use_cases/4bolt_mpmd_hex/: CMakeLists.txt  background.gen  background.jou  mpirun.source  platoApp.xml  platomain.xml
use_cases/4bolt_mpmd_tet/: 4bolt.cogent  CMakeLists.txt  albanyApp2.xml  background.gen  background.jou  interface.xml  nodal_oc1.xml  nodal_oc2.xml
use_cases/4bolt_opt_cutout/: CMakeLists.txt  body.cogent  load0.cogent  mitchell.xml  mitchell_sf.xml  mount0.cogent  mount1.cogent  mount2.cogent  mount3.cogent
use_cases/TMechStressConstrained/: CMakeLists.txt  alexaInput.xml  analyzeApp.xml  analyzeInput.xml  brick.jou  brick_reduced.exo  brick_reduced_lowres.exo  brick_reduced_lowres.exo.4.0  brick_reduced_lowres.exo.4.1  brick_reduced_lowres.exo.4.2  brick_reduced_lowres.exo.4.3  interface.xml  mpirun.source  platoApp.xml  platoMain.xml
use_cases/barlat_stress/: CMakeLists.txt  alexaApp1.xml  amgx.json  analyzeApp1.xml  analyzeApp3.xml  analyzeInput1.xml  analyzeInput2.xml  analyzeInput3.xml  bolted_bracket.exo  bolted_bracket.exo.4.0  bolted_bracket.exo.4.1  bolted_bracket.exo.4.2  bolted_bracket.exo.4.3  bolted_bracket.gen  bolted_bracket.gen.4.0  bolted_bracket.gen.4.1  bolted_bracket.gen.4.2  bolted_bracket.gen.4.3  bolted_bracket.jou  bolted_bracket_assoc1.txt  bolted_bracket_assoc2.txt  bolted_bracket_lowres.exo  bolted_bracket_lowres.exo.4.0  bolted_bracket_lowres.exo.4.1  bolted_bracket_lowres.exo.4.2  bolted_bracket_lowres.exo.4.3  interface.xml  mpirun.source  platoApp.xml  platoMain.xml  soap1.xml  soap2.xml  soap3.xml
use_cases/bolted_bracket_py/: CMakeLists.txt  analyzeApp.xml  bolted_bracket.gen  bolted_bracket.jou  bolted_bracket.xml  bolted_bracket_assoc.txt  opt.py  platoApp.xml  platoMain.xml
use_cases/bolted_bracket_stress/: .logamgx  CMakeLists.txt  amgx.json  analyzeApp.xml  analyzeInput.xml  bolted_bracket.exo  bolted_bracket.jou  interface.xml  mpirun.source  platoApp.xml
use_cases/displacements/: CMakeLists.txt  amgx.json  cube.exo  density.exo  density.gen  displacements.py  homog1.xml  homog2.xml  homog3.xml  homog4.xml  homog5.xml  homog6.xml
use_cases/gradient/: CMakeLists.txt  addDensity.py  alexaApp.xml  analyzeApp.xml  cube.exo  cube.gen  density.exo  gradient.py  homog1.xml  homog2.xml  homog3.xml  homog4.xml  homog5.xml  homog6.xml
use_cases/lbracket3D_stress_constraint/: .logamgx  CMakeLists.txt  analyzeApp.xml  analyzeInput.xml  interface.xml  lbracket.exo  lbracket.jou  mpirun.source  platoApp.xml
use_cases/mitchell3D/: CMakeLists.txt  amgx.json  analyzeInput.xml  mitchell_tet.gen  mitchell_tet.jou  mitchell_tet.xml  opt.py  output.exo  platoMain.xml
(+57 files in other folders)
