IF( PLATOMAIN )
ENDIF()

IF( ANALYZE )
ENDIF()

IF( ALBANY )
  add_subdirectory(4bolt_opt_cutout)
ENDIF()

IF( ANALYZE_MPMD AND PLATOMAIN )
  add_subdirectory(barlat_stress)
  add_subdirectory(uq_multiperf)
  add_subdirectory(TMechStressConstrained)
  add_subdirectory(bolted_bracket_stress)
  add_subdirectory(lbracket3D_stress_constraint)
  add_subdirectory(waveguide)
ENDIF()

IF( ANALYZE_PYTHON AND PLATO_PYTHON )
  add_subdirectory(displacements)
  add_subdirectory(gradient)
  add_subdirectory(strains)
  add_subdirectory(stress_pnorm)
ENDIF()

IF( ALBANY_MPMD AND PLATOMAIN )
  add_subdirectory(4bolt_mpmd_hex)
  add_subdirectory(4bolt_mpmd_tet)
ENDIF()
